--- a/FaultyMiddleware.ClientImproved/FaultyMiddleware.ClientImproved.csproj
+++ b/FaultyMiddleware.ClientImproved/FaultyMiddleware.ClientImproved.csproj
@@ -68,13 +68,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\FaultyMiddleware.Client\NaiveClient.cs">
-      <Link>NaiveClient.cs</Link>
-    </Compile>
     <Compile Include="..\FaultyMiddleware.Client\StatsCounter.cs">
       <Link>StatsCounter.cs</Link>
     </Compile>
     <Compile Include="Module.cs" />
+    <Compile Include="NaiveClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetryInterceptor.cs" />
